--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xm" href="/vite.svg" />
+    <link rel="icon" href="/src/assets/ek.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Booking System</title>
   <body>
