--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xm" href="/vite.svg" />
     <link rel="icon" href="/src/assets/ek.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Booking System</title>
+    <title>Movie Booking System - Ninja</title>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
